2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el (ucs-insert): Inherit surrounding
	properties like self-insert-command.

2008-02-11  Drew Adams  <drew.adams@oracle.com>

	* progmodes/etags.el: Add many doc strings.

2008-02-11  Jason Rumney  <jasonr@gnu.org>

	* ldefs-boot.el: Regenerated.

2008-02-11  Glenn Morris  <rgm@gnu.org>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Shorten some names.

	* ffap.el (ffap-rfc-directories): Add :version.

2008-02-11  Chris Moore  <christopher.ian.moore@gmail.com>

	* jka-cmpr-hook.el (jka-compr-compression-info-list): Handle .sifz
	files, and backup files of same.

2008-02-11  Kevin Ryde  <user42@zip.com.au>

	* ffap.el (ffap-rfc-directories): New variable.
	(ffap-rfc): Look in those dirs before offering ffap-rfc-path.

	* info.el (Info-next-reference, Info-prev-reference)
	(Info-try-follow-nearest-node): Move to and follow https:// links too.

	* simple.el (completion-list-mode): Show full completion-list-mode-map
	in the docstring.

2008-02-11  Sam Steingold  <sds@gnu.org>

	* vc-hooks.el (vc-prefix-key): Remove (undo 2008-02-06 patch).

2008-02-11  Glenn Morris  <rgm@gnu.org>

	* startup.el (emacs-startup-time): New variable.
	(command-line): Set emacs-startup-time.

	* calendar/time-date.el (emacs-uptime): New function.

2008-02-10  Bastien Guerry  <bzg@altern.org>

	* mail/rmail.el (rmail-nonignored-headers): Allow to be nil.
	(rmail-clear-headers): Don't check `rmail-nonignored-headers' when
	it is nil.

2008-02-10  Daiki Ueno  <ueno@unixuser.org>

	* epg-config.el: Expand the contents of epg-package-info.el.
	(epg-package-name): New constant.
	(epg-version-number): New constant.
	(epg-bug-report-address): New constant.

	* epa-mail.el (epa-mail-mode): Add autoload cookie.
	(epa-global-mail-mode): New global minor mode.

	* epa-file.el (epa-file-mode): New global minor mode.

	* epa-dired.el (epa-dired-mode): New global minor mode.
