@@ -1,5 +1,9 @@
 2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* ibuffer.el (ibuffer-header-line-format): New var.
+	(ibuffer-mode): Set it instead of header-line-format.
+	(ibuffer-update): Use it to set header-line-format.
+
 	* international/mule-cmds.el (ucs-insert): Inherit surrounding
 	properties like self-insert-command.
 
